--- a/Tarea_1/Untitled.ipynb
+++ b/Tarea_1/Untitled.ipynb
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +497,8 @@
     "x = []\n",
     "for i in range(len(data)):\n",
     "    x.append(np.array([float(i) for i in data[i][0].split()]))\n",
-    "x = np.array(x)\n"
+    "x = np.array(x)\n",
+    "\n"
    ]
   },
   {
@@ -509,15 +510,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Porcentaje de corres Spam            = 0.29\n",
-      "Pircentaje de corres que no son Spam = 0.71\n"
+      "Porcentaje de corres Spam            = 0.290\n",
+      "Porcentaje de corres que no son Spam = 0.710\n"
      ]
     }
    ],
@@ -525,14 +526,8 @@
     "Num_Spam = sum(x[:,-1] == True)\n",
     "Num_NSpam = sum(x[:,-1] == False)\n",
     "\n",
-    "print(\"Porcentaje de corres Spam            = {0:.2f}\".format(Num_Spam/len(data)))\n",
-    "print(\"Pircentaje de corres que no son Spam = {0:.2f}\".format(Num_NSpam/len(data)))\n",
-    "\n",
-    "# Reorganizacion de las listas\n",
-    "x = np.random.permutation(x)\n",
-    "#eleccion de los datos de entrenamiento \n",
-    "x_train = x[0:int(len(x)*0.7)]\n",
-    "x_val = x[int(len(x)*0.7)-1:-1]"
+    "print(\"Porcentaje de corres Spam            = {0:.3f}\".format(Num_Spam/len(data)))\n",
+    "print(\"Porcentaje de corres que no son Spam = {0:.3f}\".format(Num_NSpam/len(data)))\n"
    ]
   },
   {
@@ -544,16 +539,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Reorganizacion de las listas\n",
+    "x = np.random.permutation(x)\n",
+    "#eleccion de los datos de entrenamiento \n",
+    "x_train = x[0:int(len(x)*0.7)]\n",
+    "x_val = x[int(len(x)*0.7)-1:-1]"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Entrena 2 clasificadores bayesianos ingenuos con distintas distribuciones "
+    "* Entrena 2 clasificadores bayesianos ingenuos con distintas distribuciones \n",
+    "\n",
+    "vamos a ver que tipos de clases tenemos , para poder calcular los parametros de cada clase separamos en dos grupos, los que son spam y los que no para calcular los respectivos $q_{k}$ de cada clase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NS = sum(x_train[:,-1] == True)\n",
+    "NNS = sum(x_train[:,-1] == False)\n",
+    "Nt = len(x_train) \n",
+    "\n",
+    "spam_train  = x_train[x_train[:,-1]==1][:,0:-1]\n",
+    "Nspam_train = x_train[x_train[:,-1]==0][:,0:-1]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Asumimos que en nuestro problema las clases se distribuyen como una distribucion Bernoulli dado por \n",
+    "\n",
+    "$$P(C) = q^{C}(1-q)^{1-C} \\qquad \\hat{q}_{C}=\\frac{N_{c}}{N}$$\n",
+    "\n",
+    "esto para cada clase será"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estimador clase spam    = 0.288\n",
+      "Estimador clase no spam = 0.712\n"
+     ]
+    }
+   ],
+   "source": [
+    "qs = NS/Nt\n",
+    "qns = NNS/Nt\n",
+    "\n",
+    "print(\"Estimador clase spam    = {0:.3f}\".format(qs))\n",
+    "print(\"Estimador clase no spam = {0:.3f}\".format(qns))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora se estiman las verosimilitudes asumiendo que los datos se distribuyen como una multinomial dada por la siguiente expresión \n",
+    "\n",
+    "$$P(x|C) = \\frac{n!}{\\prod_{t=1}^{|v|}}\\prod_{t=1}^{|v|}q(w_{t}|C)^{x_{t}}$$\n",
+    "\n",
+    "Sin embargo, podemos ignorar el término de normalización para calcular la siguiente expresión\n",
+    "\n",
+    "$$P(x|C) \\propto \\prod_{t=1}^{|v|}q(w_{t}|C)^{x_{t}} $$\n",
+    "\n",
+    "Para estimar cada parametro de cada clase tenemos que tener en cuenta la frecuencia de la palabra en cada clase dadas por $n_{c}(w_{t})$\n",
+    "\n",
+    "$$\\hat{q}(w_{t}|C) = \\frac{n_{C}(w_{t})}{\\sum_{s=1}^{|V|}n_{C}(w_{t})}$$\n",
+    "\n",
+    "Se cuenta el número de ocurrencias de las palabras en las clases $n_{C}(w_{t})$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.815742914037902e-99\n",
+      "0.0\n",
+      "4.815742914037902e-99\n"
+     ]
+    }
+   ],
+   "source": [
+    "pst = spam_train.sum(axis=0)/spam_train.sum()\n",
+    "pNst = Nspam_train.sum(axis=0)/Nspam_train.sum()\n",
+    "\n",
+    "print(qs*np.power(pst,x_val[0][:-1]).prod())\n",
+    "print(qns*np.power(pNst,x_val[0][:-1]).prod())\n",
+    "print(max(qs*np.power(pst,x_val[0][:-1]).prod(),qns*np.power(pNst,x_val[0][:-1]).prod()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se construye el clasificador asumiendo que le entra un renglon que representa un correo, que es el histograma de palabras\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Clasificador(x):\n",
+    "    x_t = x[:-1]\n",
+    "    Cs = qs*np.power(pst,x).prod()\n",
+    "    CNs = qns*np.power(pNst,x).prod()\n",
+    "    clases={Cs:1.0,CNs:0.0}\n",
+    "    return clases[max(Cs,CNs)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se verifica el grupo de validación corroborando cuantos casos se acierta en la predicción dada la etiqueta de los datos de validacion \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9207474226804123"
+      ]
+     },
+     "execution_count": 198,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xprueba = []\n",
+    "for i in range(len(x_val)):\n",
+    "    xprueba.append(Clasificador(x_val[i][:-1]))\n",
+    "    \n",
+    "sum(xprueba==x_val[::,-1])/len(x_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True,  True,  True, ...,  True,  True,  True])"
+      ]
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xprueba==x_val[::,-1]"
    ]
   },
   {
@@ -572,10 +738,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.00, 0.00, 0.00, ..., 0.00, 0.00, 0.00],\n",
+       "       [0.00, 0.00, 0.00, ..., 0.00, 0.00, 0.00],\n",
+       "       [0.00, 0.00, 0.00, ..., 0.00, 1.00, 0.00],\n",
+       "       ...,\n",
+       "       [1.00, 0.00, 0.00, ..., 0.00, 0.00, 0.00],\n",
+       "       [0.00, 0.00, 0.00, ..., 0.00, 0.00, 0.00],\n",
+       "       [0.00, 0.00, 0.00, ..., 0.00, 0.00, 0.00]])"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spam_train"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -586,10 +771,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.83, 0.02, 0.09, 0.22],\n",
+       "       [0.04, 0.23, 0.30, 0.92],\n",
+       "       [0.20, 0.30, 0.25, 0.86],\n",
+       "       [0.49, 0.61, 0.93, 0.00]])"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y = np.random.rand(4,4)\n",
+    "Y"
+   ]
   },
   {
    "cell_type": "code",
@@ -656,9 +858,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "vamos a ver que tipos de clases tenemos , para poder calcular los parametros de cada clase separamos en dos grupos, los que son spam y los que no para calcular los respectivos $q_{k}$ de cada clase"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
