implementacion primer modelo de Bayes ingenuo
No funciona muy bien
EMV no supera el 50%
y MAP apenas lo supera

--- a/Tarea_3/Tarea_3.ipynb
+++ b/Tarea_3/Tarea_3.ipynb
@@ -2436,7 +2436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 448,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2445,14 +2445,22 @@
     " \n",
     "d = np.shape(x_train)[0]    # Numero de jugadores \n",
     "\n",
-    "nGA = sum(x_train[:,-1:]==1) # Numero de Ganadores A\n",
-    "nGB = sum(x_train[:,-1:]==0) # Numero de Ganadores B\n",
+    "nG = sum(x_train[:,-1:]==1) # Numero de Ganadores \n",
+    "nP = sum(x_train[:,-1:]==0) # Numero de Perdedores  \n",
     "\n",
-    "nPA = nGB # Numero de Perdedores A\n",
-    "nPB = nGA # Numero de Perdedores B\n",
+    "#nPA = nGB # Numero de Perdedores A\n",
+    "#nPB = nGA # Numero de Perdedores B\n",
     "\n",
-    "JugGanA = x_train[x_train[:,-1]==1][:,1]\n",
-    "JugGanB = x_train[x_train[:,-1]==0][:,1]\n"
+    "#encuentros que gano A\n",
+    "JugGanA = x_train[x_train[:,-1]==1][:,0] #ID de ganadores de A\n",
+    "nGA = len(JugGanA)\n",
+    "JugPerB = x_train[x_train[:,-1]==1][:,1] #ID de perdedores de B\n",
+    "nPB = len(JugPerB)\n",
+    "#encuentros que gano B\n",
+    "JugGanB = x_train[x_train[:,-1]==0][:,0] #ID de ganadores de A\n",
+    "nGB = len(JugGanB)\n",
+    "JugPerA = x_train[x_train[:,-1]==0][:,1] #ID de perdedores de B\n",
+    "nPA = len(JugPerA)\n"
    ]
   },
   {
@@ -2476,59 +2484,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 582,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.10434782608695652"
+      ]
+     },
+     "execution_count": 582,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = x_val[3][:-1]\n",
+    "\n",
+    "\n",
+    "\n",
+    "def EMV(x):\n",
+    "    PA = nG/d ; PB = nP/d # probabilidades de la clase\n",
+    "\n",
+    "    #xinG = x[0] in JugGanA; xinP = x[1] in JugGanB\n",
+    "\n",
+    "    qGA = np.unique(JugGanA,return_counts = True) \n",
+    "    qPB = np.unique(JugPerB,return_counts = True)\n",
+    "\n",
+    "    qGB = np.unique(JugGanB,return_counts = True) \n",
+    "    qPA = np.unique(JugPerA,return_counts = True)\n",
+    "\n",
+    "\n",
+    "\n",
+    "    QGA = {qGA[0][i]:qGA[1][i] for i in range(len(qGA[0]))}\n",
+    "    QPB = {qPB[0][i]:qPB[1][i] for i in range(len(qPB[0]))}\n",
+    "\n",
+    "    QGB = {qGB[0][i]:qGB[1][i] for i in range(len(qGB[0]))}\n",
+    "    QPA = {qPA[0][i]:qPA[1][i] for i in range(len(qPA[0]))}\n",
+    "\n",
+    "\n",
+    "\n",
+    "    if x[0] in QGA and x[1] in QGB:\n",
+    "        CA = float(PA*(QGA[x[0]]/nGA)*(QGB[x[1]]/nGB))\n",
+    "    else:\n",
+    "        CA = 0\n",
+    "    if x[0] in QPA and x[1] in QPB:\n",
+    "        CB = float(PB*(QPA[x[0]]/nPA)*(QPB[x[1]]/nPB))\n",
+    "    else:\n",
+    "        CB = 0\n",
+    "    #clases = {float(CA):\"Gana x1\",float(CB):\"Gana x2\"}\n",
+    "    clases = {float(CA):1,float(CB):0}\n",
+    "    \n",
+    "    \n",
+    "    if CA == 0 or CB == 0:\n",
+    "        return None\n",
+    "    \n",
+    "    return clases[max(CA,CB)]\n",
+    "\n",
+    "s = 0\n",
+    "for i in range(len(x_val)):\n",
+    "    s+=EMV(x_val[:,[0,1]][i])==x_val[:,-1][i]\n",
+    "    \n",
+    "\n",
+    "s/len(x_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 591,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5130434782608696"
+      ]
+     },
+     "execution_count": 591,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = x_val[3][:-1]\n",
+    "\n",
+    "\n",
+    "\n",
+    "def MAP(x):\n",
+    "    K = 4\n",
+    "    alpha1,alpha2,alpha3,alpha4 = 10,10,0,10\n",
+    "    s1,s2,s3,s4 = alpha1*K*(K+1),alpha2*K*(K+1),alpha3*K*(K+1),alpha4*K*(K+1)\n",
+    "    PA = nG/d ; PB = nP/d # probabilidades de la clase\n",
+    "\n",
+    "    #xinG = x[0] in JugGanA; xinP = x[1] in JugGanB\n",
+    "\n",
+    "    qGA = np.unique(JugGanA,return_counts = True) \n",
+    "    qPB = np.unique(JugPerB,return_counts = True)\n",
+    "\n",
+    "    qGB = np.unique(JugGanB,return_counts = True) \n",
+    "    qPA = np.unique(JugPerA,return_counts = True)\n",
+    "\n",
+    "\n",
+    "\n",
+    "    QGA = {qGA[0][i]:qGA[1][i] for i in range(len(qGA[0]))}\n",
+    "    QPB = {qPB[0][i]:qPB[1][i] for i in range(len(qPB[0]))}\n",
+    "\n",
+    "    QGB = {qGB[0][i]:qGB[1][i] for i in range(len(qGB[0]))}\n",
+    "    QPA = {qPA[0][i]:qPA[1][i] for i in range(len(qPA[0]))}\n",
+    "    \n",
+    "    if x[0] in QGA and x[1] in QGB:  CA = float(PA*((QGA[x[0]]+alpha1-1)/(nG+s1-K))*((QGB[x[1]]+alpha2-1)/(nG+s2-K)))\n",
+    "    if x[0] in QGA and x[1] not in QGB:  CA = float(PA*((QGA[x[0]]+alpha1-1)/(nG+s1-K))*(alpha2-1)/(nG+s2-K))\n",
+    "    if x[0] not in QGA and x[1] in QGB: CA = float(PA*(alpha1-1/(nG+s1-K))*((QGB[x[1]]+alpha2-1)/(nG+s2-K)))\n",
+    "    if x[0] not in QGA and x[1] not in QGB: CA = 0\n",
+    "\n",
+    "    if x[0] in QPA and x[1] in QPB:  CB = float(PB*((QPA[x[0]]+alpha3-1)/(nP+s3-K))*((QPB[x[1]]+alpha4-1)/(nP+s4-K)))\n",
+    "    if x[0] in QPA and x[1] not in QPB:  CB = float(PB*((QPA[x[0]]+alpha3-1)/(nP+s3-K))*(alpha4-1)/(nP+s4-K))\n",
+    "    if x[0] not in QPA and x[1] in QPB: CB = float(PB*(alpha3-1/(nP+s3-K))*((QPB[x[1]]+alpha4-1)/(nP+s4-K)))\n",
+    "    if x[0] not in QPA and x[1] not in QPB: CB = 0\n",
+    "    \n",
+    "#    clases = {float(CA):\"Gana x1\",float(CB):\"Gana x2\"}\n",
+    "    clases = {float(CA):1,float(CB):0}\n",
+    "        \n",
+    "    return clases[max(CA,CB)]\n",
+    "\n",
+    "s = 0\n",
+    "for i in range(len(x_val)):\n",
+    "    s+=MAP(x_val[:,[0,1]][i])==x_val[:,-1][i]\n",
+    "    \n",
+    "\n",
+    "s/len(x_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 602,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.0031348] [0.0031348]\n"
+      "0.7130434782608696\n"
      ]
     }
    ],
    "source": [
-    "x = [2,1]\n",
-    "\n",
-    "\n",
-    "PA = nGA/d ; PB = nGB/d # probabilidades de la clase\n",
-    "\n",
-    "xinG = x[0] in JugGanA; xinP = x[1] in JugGanB\n",
-    "\n",
-    "qA = np.unique(JugGanA,return_counts = True) \n",
-    "qB = np.unique(JugGanB,return_counts = True)\n",
-    "\n",
-    "QA = {qA[0][i]:qA[1][i] for i in range(len(qA[0]))}\n",
-    "QB = {qB[0][i]:qB[1][i] for i in range(len(qB[0]))}\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "CA = PA*(QA[x[0]]/nGA)\n",
-    "CB = PB*(QB[x[1]]/nGB)\n",
-    "clases = {float(CA):\"Gana A\",float(CB):\"Gana B\"}\n",
-    "    \n",
-    "\n",
-    "print(CA,CB)"
+    "from sklearn.naive_bayes import MultinomialNB,ComplementNB,BernoulliNB, GaussianNB\n",
+    "from sklearn.metrics import accuracy_score, precision_score\n",
+    "clf1 = BernoulliNB()\n",
+    "clf1.fit(x_train[:,[0,1]],x_train[:,-1])\n",
+    "pred1 = clf1.predict(x_val[:,[0,1]])\n",
+    "print(accuracy_score(x_val[:,-1],pred1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "2",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-24-bd146f1c469e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mQB\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m: 2"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "naive_bayes.CategoricalNB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
