--- a/Tarea_3/Tarea_3_2.ipynb
+++ b/Tarea_3/Tarea_3_2.ipynb
@@ -294,7 +294,7 @@
     "\n",
     "Donde $\\mathcal{H}$ es la matriz Hessiana compuesta de las segundas derivadas de la función de error, que por definición está dada por \n",
     "\n",
-    "$$\\mathcal = \\nabla_{\\omega}\\nabla_{\\omega}E(\\vec{\\omega}) = \\sum_{n=1}^{N]y_{n}(1-y_{n})\\phi_{n}\\phi_{n^{T}}$$\n",
+    "$$\\mathcal{H} = \\nabla_{\\omega}\\nabla_{\\omega}E(\\vec{\\omega}) = \\sum_{n=1}^{N}y_{n}(1-y_{n})\\phi_{n}\\phi_{n^{T}}$$\n",
     "\n",
     "notamos que $\\mathcal{H}$ depende del estado actual de $\\vec{\\omega}^{T}$ "
    ]
