--- a/Tarea_3/Tarea_3.ipynb
+++ b/Tarea_3/Tarea_3.ipynb
@@ -3160,7 +3160,7 @@
    ],
    "source": [
     "np.shape(dummy_matrix(x_val[:,1]))\n",
-    "#model.predict(x_val[:,[0,1]])\n",
+    "model.predict(x_val[:,[0,1]])\n",
     "\n"
    ]
   },
@@ -3514,7 +3514,7 @@
     "X_train, X_test, Y_train,Y_test = train_test_split(x_data,x_target,test_size = 0.2)\n",
     "\n",
     "cancer_model_G = GaussianNB()\n",
-    "cancer_model_G.fit(X_train,Y_train)\n",
+    "cancer_model_G.fit(X_train,Y_train)`\n",
     "\n",
     "print(\"Rendimiento del modelo Naive Bayes = {:.3f}\".format(cancer_model_G.score(X_test,Y_test)))\n",
     "pred_prob_G = cancer_model_G.predict(X_test[1:2])\n"
