--- a/Tarea_3/Tarea_3.ipynb
+++ b/Tarea_3/Tarea_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3797,6 +3797,58 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicciones correctas = 59\n",
+      "Predicciones incorrectas = 28\n",
+      "La precisión es del  = 0.90\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "\n",
+    "col_name = [\"Jugador A\",\"Jugador B\",\"Resultado\"]\n",
+    "x_train = np.loadtxt(\"regl_data/juegos_entrenamiento.txt\")\n",
+    "x_val = np.loadtxt(\"regl_data/juegos_validacion.txt\")\n",
+    "x_data = np.concatenate((x_train,x_val),axis = 0)\n",
+    "df  = pd.DataFrame(data = x_data,columns=col_name)\n",
+    "#df_val  = pd.DataFrame(data = x_val,columns=col_name)\n",
+    "\n",
+    "df_train_dummy= pd.get_dummies(data = df,columns = [\"Jugador A\",\"Jugador B\"])\n",
+    "\n",
+    "X = df_train_dummy.drop(\"Resultado\",axis=1)\n",
+    "Y = df_train_dummy[\"Resultado\"]\n",
+    "\n",
+    "X_train, X_test, Y_train,Y_test = train_test_split(X,Y,test_size = 0.2,random_state =0)\n",
+    "\n",
+    "sc = StandardScaler()\n",
+    "X_train = sc.fit_transform(X_train)\n",
+    "X_test = sc.transform(X_test)\n",
+    "\n",
+    "classifier = LogisticRegression(random_state = 0,solver = \"lbfgs\")\n",
+    "classifier.fit(X_train,Y_train)\n",
+    "y_pred = classifier.predict(X_test)\n",
+    "score = accuracy_score(y_true=Y_train, y_pred=classifier.predict(X_train))\n",
+    "CM = confusion_matrix(Y_test, y_pred)\n",
+    "\n",
+    "print(\"Predicciones correctas = {}\".format(np.sum(np.diag(CM))))\n",
+    "print(\"Predicciones incorrectas = {}\".format(CM[0,1]+CM[1,0]))\n",
+    "print(\"La precisión es del  = {:.2f}\".format(score))"
+   ]
   },
   {
    "cell_type": "code",
