--- a/Tarea_4/Ejercicio_3.ipynb
+++ b/Tarea_4/Ejercicio_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "True"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,15 +91,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Finding Elimination Order: : 100%|██████████| 4/4 [00:00<00:00, 1257.38it/s]\n",
-      "Eliminating: C: 100%|██████████| 4/4 [00:00<00:00, 169.91it/s]"
+      "Finding Elimination Order: : 100%|██████████| 4/4 [00:00<00:00, 1582.91it/s]\n",
+      "Eliminating: C: 100%|██████████| 4/4 [00:00<00:00, 187.01it/s]"
      ]
     },
     {
@@ -124,9 +124,196 @@
     }
    ],
    "source": [
-    "model = VariableElimination(model)\n",
+    "model_1 = VariableElimination(model)\n",
     "\n",
-    "print(model.query(variables=[\"E\"], evidence={\"D\":1}))"
+    "print(model_1.query(variables=[\"E\"], evidence={\"D\":1}))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Finding Elimination Order: : 100%|██████████| 4/4 [00:00<00:00, 801.13it/s]\n",
+      "Eliminating: S: 100%|██████████| 4/4 [00:00<00:00, 199.31it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+----------+\n",
+      "| C    |   phi(C) |\n",
+      "+======+==========+\n",
+      "| C(0) |   0.5985 |\n",
+      "+------+----------+\n",
+      "| C(1) |   0.4015 |\n",
+      "+------+----------+\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model_1.query(variables=[\"C\"],evidence={\"V\":1}))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Finding Elimination Order: : 100%|██████████| 4/4 [00:00<00:00, 1101.37it/s]\n",
+      "Eliminating: S: 100%|██████████| 4/4 [00:00<00:00, 248.79it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+----------+\n",
+      "| V    |   phi(V) |\n",
+      "+======+==========+\n",
+      "| V(0) |   0.2960 |\n",
+      "+------+----------+\n",
+      "| V(1) |   0.7040 |\n",
+      "+------+----------+\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model_1.query(variables=[\"V\"],evidence={\"E\":1}))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(E _|_ C | S)\n",
+       "(E _|_ D | V)\n",
+       "(E _|_ C, V, D | F, S)\n",
+       "(E _|_ D | F, V)\n",
+       "(E _|_ C, D | S, V)\n",
+       "(E _|_ C | S, D)\n",
+       "(E _|_ D | C, V)\n",
+       "(E _|_ V, D | C, F, S)\n",
+       "(E _|_ C, D | F, S, V)\n",
+       "(E _|_ C, V | F, S, D)\n",
+       "(E _|_ D | F, C, V)\n",
+       "(E _|_ D | C, S, V)\n",
+       "(E _|_ C | S, V, D)\n",
+       "(E _|_ D | C, F, S, V)\n",
+       "(E _|_ V | C, F, S, D)\n",
+       "(E _|_ C | F, S, V, D)\n",
+       "(F _|_ C | S)\n",
+       "(F _|_ D | V)\n",
+       "(F _|_ S, C | E)\n",
+       "(F _|_ C, D | S, V)\n",
+       "(F _|_ C | E, S)\n",
+       "(F _|_ C | S, D)\n",
+       "(F _|_ D | C, V)\n",
+       "(F _|_ S | E, C)\n",
+       "(F _|_ D | E, V)\n",
+       "(F _|_ D | C, S, V)\n",
+       "(F _|_ C, D | E, S, V)\n",
+       "(F _|_ C | S, V, D)\n",
+       "(F _|_ C | E, S, D)\n",
+       "(F _|_ D | E, C, V)\n",
+       "(F _|_ D | E, C, S, V)\n",
+       "(F _|_ C | E, S, V, D)\n",
+       "(S _|_ D | V)\n",
+       "(S _|_ F | E)\n",
+       "(S _|_ D | F, V)\n",
+       "(S _|_ D | C, V)\n",
+       "(S _|_ F | E, C)\n",
+       "(S _|_ D | E, V)\n",
+       "(S _|_ D | F, C, V)\n",
+       "(S _|_ D | E, F, V)\n",
+       "(S _|_ D | E, C, V)\n",
+       "(S _|_ D | E, F, C, V)\n",
+       "(V _|_ C | S)\n",
+       "(V _|_ E, C | F, S)\n",
+       "(V _|_ C | E, S)\n",
+       "(V _|_ C | S, D)\n",
+       "(V _|_ E | C, F, S)\n",
+       "(V _|_ C | E, F, S)\n",
+       "(V _|_ E, C | F, S, D)\n",
+       "(V _|_ C | E, S, D)\n",
+       "(V _|_ E | C, F, S, D)\n",
+       "(V _|_ C | E, F, S, D)\n",
+       "(D _|_ C | S)\n",
+       "(D _|_ S, E, F, C | V)\n",
+       "(D _|_ E, C | F, S)\n",
+       "(D _|_ S, E, C | F, V)\n",
+       "(D _|_ E, F, C | S, V)\n",
+       "(D _|_ C | E, S)\n",
+       "(D _|_ E, F, S | C, V)\n",
+       "(D _|_ S, F, C | E, V)\n",
+       "(D _|_ E | C, F, S)\n",
+       "(D _|_ E, C | F, S, V)\n",
+       "(D _|_ C | E, F, S)\n",
+       "(D _|_ E, S | F, C, V)\n",
+       "(D _|_ S, C | E, F, V)\n",
+       "(D _|_ E, F | C, S, V)\n",
+       "(D _|_ F, C | E, S, V)\n",
+       "(D _|_ F, S | E, C, V)\n",
+       "(D _|_ E | C, F, S, V)\n",
+       "(D _|_ C | E, F, S, V)\n",
+       "(D _|_ S | E, F, C, V)\n",
+       "(D _|_ F | E, C, S, V)\n",
+       "(C _|_ E, F, V, D | S)\n",
+       "(C _|_ D | V)\n",
+       "(C _|_ F | E)\n",
+       "(C _|_ E, V, D | F, S)\n",
+       "(C _|_ D | F, V)\n",
+       "(C _|_ E, F, D | S, V)\n",
+       "(C _|_ F, V, D | E, S)\n",
+       "(C _|_ E, F, V | S, D)\n",
+       "(C _|_ D | E, V)\n",
+       "(C _|_ E, D | F, S, V)\n",
+       "(C _|_ V, D | E, F, S)\n",
+       "(C _|_ E, V | F, S, D)\n",
+       "(C _|_ D | E, F, V)\n",
+       "(C _|_ F, D | E, S, V)\n",
+       "(C _|_ E, F | S, V, D)\n",
+       "(C _|_ F, V | E, S, D)\n",
+       "(C _|_ D | E, F, S, V)\n",
+       "(C _|_ E | F, S, V, D)\n",
+       "(C _|_ V | E, F, S, D)\n",
+       "(C _|_ F | E, S, V, D)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.get_independencies()\n"
    ]
   },
   {
